# web-extension-color-changer

./: .gitignore  Cargo.toml  background.js  background.ts  cc.css  cc.js  cc.test.ts  color-conversion.test.ts  constants.ts  content.js  content.ts  description.txt  interfaces.ts  manifest.chrome.json  manifest.ff.json  manifest.json  package-lock.json  package.json  readme.md  state.json  todo.txt  tsconfig.json  utils.ts  version history - check manifest.txt  version history.txt  vite.config.ts  vite.content.ts  vite.popup.ts
about/: about.css  about.html  about.js  about.ts
popup/: cc_popup.css  cc_popup.html  cc_popup.js  popup.css  popup.html  popup.js  popup.ts  square-color-picker.css
public/: manifest.json
scripts/: copy-manifest.js  zip.js  zip.ps1
src/: background.ts  constants.ts  content.ts  interfaces.ts  lib.rs  manifest.chrome.json  manifest.ff.json  mockBrowser.ts  types.ts  util.rs  utils.ts
src/popup/: popup.css  popup.html  popup.ts  square-color-picker.css
