[package]
name = "color-changer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = {version = "0.2.82", features = ["serde-serialize"]}
js-sys = "0.3.59"
wasm-bindgen-futures = "0.4.32"
console_error_panic_hook = "0.1.7"
serde_json = "1.0.82"
serde = {version = "1.0.140", features = ["derive"]}

web-sys = {version = "0.3.59", features = [
    "console",
    "Window",
    "Storage",
    "Document",
    "Location",
]}